basic incoming text response

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Austin Crim",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "twilio": "^3.42.0"
   },
   "devDependencies": {
