--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "isomorphic-unfetch": "^3.0.0",
     "twilio": "^3.42.0"
   },
   "devDependencies": {
