--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "twilio": "^3.42.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
   }
 }
